Fix spacing around view selectors

--- a/src/routes/Home/style.css
+++ b/src/routes/Home/style.css
@@ -63,7 +63,7 @@
 
 .viewSelectors {
   width: 15rem;
-  margin: 0 auto;
+  margin: 1rem auto;
   display: flex;
   justify-content: center;
 }
